# SRB2Xmas096-SDL

./: CMakeLists.txt  d_clisrv.c  d_main.c  d_main.h  d_net.c  d_netcmd.c  doomdata.h  doomtype.h  f_finale.c  g_input.h  i_net.h  i_tcp.c  info.c  info.h  m_cheat.c  m_fixed.h  p_enemy.c  p_inter.c  p_mobj.c  p_mobj.h  p_saveg.c  p_setup.c  p_spec.c  p_user.c  r_data.h  r_main.c  screen.c  sounds.h  st_stuff.c  v_video.c  wi_stuff.c
.github/workflows/: emscripten.yml
assets/installer/: xmassupp.wad
sdl/: dosstr.c  i_cdmus.c  i_main.c  i_net.c  i_sound.c  i_system.c  i_video.c  i_video.h
web/: CMakeLists.txt  index.html
web/js/: requestfullscreen.js  timidity.js
